--- a/index.html
+++ b/index.html
@@ -30,12 +30,17 @@
 
   <p> Sneakers also go hand in hand with clothes. I particularly like to wear hoodies and t-shirts by brands like Supreme, Polo, Comme des garcons, Nike, Kappa, BBC, G-star, Champion, Adidas, Stussy etc.</p>
 
-<h3> Favorite Places To Buy Sneakers: </h3>
+<p> Likes: SNEAKERS, FOOD, MUSIC </p>
+<p> Dislikes: PEOPLE </p>
+
+<h3> Favorite Places To Buy And Research Sneakers: </h3>
 
 <ul>
   <li><a href="https://www.goat.com/?gclid=CjwKCAjwyrvaBRACEiwAcyuzRPVh1XU9cF9dDAMn1Rci6rFOTBG_i4AbPcS5fbOdq7_4S6_ND54FQhoC7H8QAvD_BwE">GOAT</a>
   <li><a href="https://stockx.com/?gclid=CjwKCAjwp7baBRBIEiwAPtjwxFn2BcRxat__-Y5Cx-UMSVmp3WkvLQjkr4ukH_BZ0QYTfZXF-WmxthoC1NwQAvD_BwE">StockX</a>
   <li><a href="http://shop.kicksonfire.com/">Kicks On Fire</a>
+  <li><a href="https://sneakernews.com/">Sneaker News</a>
+  <li><a href="https://www.youtube.com/">YouTube</a>
   </li>
 
 </ul>
